@@ -4,8 +4,9 @@
 * Add autostart flag for watches so they don't necessarily startup with god [kevinclark]
 * Change command line call options for god binary to accommodate watch start/stop functionality
 * Add individual start/stop/restart grace periods for finer grained control
-* Change default DRb port to 17165 (god in base 32)
+* Change default DRb port to 17165 ('god'.to_i(32))
 * Implement command line control to start/restart/stop/monitor/unmonitor watches by name
+* Watches can now belong to a group that can be controlled as a whole
 
 == 0.2.1 / 
 
